src/test/ui/imports/unresolved-imports-used.stderr
error[E0432]: unresolved import `qux::bar`
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
  --> $DIR/unresolved-imports-used.rs:9:5
   |
LL | use qux::bar;
   |     ^^^^^^^^ no `bar` in `qux`

error[E0432]: unresolved import `foo`
  --> $DIR/unresolved-imports-used.rs:10:5
   |
LL | use foo::bar;
   |     ^^^ maybe a missing crate `foo`?

error[E0603]: function `quz` is private
  --> $DIR/unresolved-imports-used.rs:8:10
   |
LL | use qux::quz;
   |          ^^^

error: aborting due to 3 previous errors
=======
  --> $DIR/unresolved-imports-used.rs:10:5
   |
LL | use qux::bar;
   |     ^^^^^^^^ no `bar` in `qux`

error[E0432]: unresolved import `qux::bar2`
  --> $DIR/unresolved-imports-used.rs:13:5
   |
LL | use qux::bar2;
   |     ^^^^^^^^^ no `bar2` in `qux`

error[E0432]: unresolved import `foo`
  --> $DIR/unresolved-imports-used.rs:11:5
   |
LL | use foo::bar;
   |     ^^^ maybe a missing crate `foo`?

error[E0432]: unresolved import `baz`
  --> $DIR/unresolved-imports-used.rs:12:5
   |
LL | use baz::*;
   |     ^^^ maybe a missing crate `baz`?

error[E0432]: unresolved import `foo2`
  --> $DIR/unresolved-imports-used.rs:14:5
   |
LL | use foo2::bar2;
   |     ^^^^ maybe a missing crate `foo2`?

error[E0432]: unresolved import `baz2`
  --> $DIR/unresolved-imports-used.rs:15:5
   |
LL | use baz2::*;
   |     ^^^^ maybe a missing crate `baz2`?

error[E0603]: function `quz` is private
  --> $DIR/unresolved-imports-used.rs:9:10
   |
LL | use qux::quz;
   |          ^^^

error: unused import: `qux::quy`
  --> $DIR/unresolved-imports-used.rs:16:5
   |
LL | use qux::quy;
   |     ^^^^^^^^
   |
note: lint level defined here
  --> $DIR/unresolved-imports-used.rs:2:9
   |
LL | #![deny(unused_imports)]
   |         ^^^^^^^^^^^^^^

error: aborting due to 8 previous errors
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)

Some errors have detailed explanations: E0432, E0603.
For more information about an error, try `rustc --explain E0432`.
